# pg_volvec

./: .gitignore  DESIGN.md  LOCAL_RUNBOOK.md  README.md  ROADMAP.md  TODO.md  jit_deform_datachunk.md  llvmjit_expr.md  meson.build  page-wise-scan.md  parallel_deformer.md  pg_volvec--1.0.sql  pg_volvec.control  tpch_perf_snapshot.tsv  vecSortDesign.md
.github/workflows/: ci.yml
expected/: plain_expr.out  q1.out  q10.out  q11.out  q12.out  q13.out  q14.out  q15.out  q16.out  q17.out  q18.out  q19.out  q2.out  q20.out  q21.out  q22.out  q3.out  q4.out  q5.out  q6.out  q7.out  q8.out  q9.out  smoke.out
sql/: plain_expr.sql  q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql  smoke.sql
src/bridge/: execute.cpp  execute.h  pg_volvec.c  state.c  state.h
src/engine/: data_chunk_deform.hpp  executor.cpp  expr.cpp  llvmjit_deform_datachunk.cpp  llvmjit_deform_datachunk.h  llvmjit_expr.cpp  volvec_engine.hpp
tests/: bench_tpch_local.sh  bench_tpch_supported.sh  profile_query.sh  profile_tpch_supported.sh  q22_explain.sql  q6_smoke.sql  run_q6_smoke.sh
